# learningAgent

./: .gitignore  README.md  pyproject.toml  requirements.txt
.env/: humpy.example.json  local.example.json  model.example.json
.env.example/: bot.json  humpy.json  model.json
app/: regressWorkoutWeek.py
humpy/: README.md  __init__.py  __main__.py  bot.py  chatSession.py  cli.py  commands.py  config.py  hPath.py  humpyCfg.py  memory.py  message.py  modelCfg.py  prompt.py  session.py  utils.py
humpy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
humpy/memory/: __init__.py  pick.py  store.py
playground/agentProbe/: README.md  probeCodexOneRound.py  probeXiaoBaOneRound.py
playground/chatloop/: chatLoop.py  chatLoopPseudo.py
playground/hw/: hwAgent.py  hwApiAnthropic.py  hwApiCodex.py
